Bug 430796 - Broken link for About KDE
Summary: Broken link for About KDE
Status: RESOLVED FIXED
Alias: None
Product: yakuake
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-25 01:13 UTC by Richard L. Scott
Modified: 2021-01-07 20:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Yakuake menu (52.47 KB, image/png)
2020-12-25 01:13 UTC, Richard L. Scott
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Richard L. Scott 2020-12-25 01:13:26 UTC
Created attachment 134317 [details]
Yakuake menu

SUMMARY
While exploring the features and options of Yakuake in the menu I clicked the "About KDE".  From there, I clicked "https://kde.org/community/getinvolved/" and got a 404 error, page not found.  I would think that the URL has changed and just needs to be updated.

STEPS TO REPRODUCE
1. Open Yakuake
2. Click the menu in the lower right-hand corner
3. Select About KDE
4. Click the link https://kde.org/community/getinvolved/
5. Received a 404 error that the page could not be found

OBSERVED RESULT
404 Page could not be found

EXPECTED RESULT
A web page with information about how to get involved with KDE; ironically enough, by submitting this bug it looks like I'm on my way :-)

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2021-01-07 18:09:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kxmlgui/-/merge_requests/36
Comment 2 Maximilian Schiller 2021-01-07 20:17:55 UTC
Git commit f0f8dcfe0be814418b9cb4d1f799c82860e9115f by Maximilian Schiller.
Committed on 07/01/2021 at 18:03.
Pushed by mschiller into branch 'master'.

Use the correct kde get involved url

The about kde dialog points to an outdated get involved url.

M  +1    -1    src/kaboutkdedialog_p.cpp

https://invent.kde.org/frameworks/kxmlgui/commit/f0f8dcfe0be814418b9cb4d1f799c82860e9115f