Use the correct kde get involved url

The about kde dialog points to an outdated get involved url.

BUG: 430796